// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container should define a badge color when it's the last message of customer and from chat 1`] = `
<div>
  Avatar
  <div>
    badgeColor: 
    var(--neutral-grey-4)
  </div>
</div>
`;

exports[`Container should render 1`] = `
<div
  class="ticket-message component"
  data-testid="ticket-message-1"
>
  <div
    class="avatar"
  >
    <div>
      Avatar
      <div>
        badgeColor: 
      </div>
    </div>
  </div>
  <div
    class="bodyWrapper"
  >
    <div>
      Header
      <div>
        SourceDetailsHeader
      </div>
    </div>
    <div>
      Footer
    </div>
  </div>
</div>
`;
